@startuml
'https://plantuml.com/class-diagram

class TODOList{
-start()
-main()
-stop()
}

class TODOListController{

-List myToDoList

-TableView<Item> tableView
-TableColumn<Item, String> desc
-TableColumn<Item, String> dueDate
-TableColumn<Item, String> status

-Label storage

-MenuItem showAll
-MenuItem showComplete
-MenuItem showIncomplete

-Button removeButton

-MenuItem fileUpload
-MenuItem fileDownload

+editDescription()
+editDueDate()
+editStatus()

+showAllItems()
+showIncompleteItems()
+showCompleteItems()

+clear()
+getList()

+openFile()

+setCellFactory()
+setTableCellEditable()

+handleAddButton()
+handleRemoveButton()
+handleFileOpen()
+handleFileDownload()

+ handleSortButton()

+initialize()

}

class List{

-String title
-int storage

-int count

-ArrayList<Item> itemList

+List()

+addItem()
+removeItem()

+getTitle()
+setTitle()

+getBalance()
+setBalance()

+editTitle()

+clearAllItems()

+editDescription()
+editDueDate()
+editStatus()

+getItems()
+getCompleteItems()
+getIncompleteItems()

}

class Item{
-String description
-String dueDate
-String status;

+Item()

+getDescription()
+setDescription()

+getDueDate()
+setDueDate()

+getStatus()
+setStatus()

+toString()

}

class ItemController{

DatePicker date
TextArea description
Button addTaskButton

+addTask()
+initialize()

}


Javafx.Application <|-- TODOList

TODOList <|-- TODOListController
List - TODOListController

TODOList --> List
List --> Item

TODOListController <-- ItemController
ItemController <-- Item



@enduml
